# repociv

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT-FORMAT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  FIX_PLAN.md  INTEGRATED_PLAN.md  LICENSE  NEXT_SESSION_GOAL.md  README.en.md  README.md  SECURITY.md  bridge.py  conftest.py  debug_rooms.ts  docker-compose.yml  eslint.config.js  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json  vite.config.ts
docker/: agent-entrypoint.sh  entrypoint.sh
docs/: API.md  AUDIT_DELTA_ADDENDUM.md  AUDIT_RECOMMENDATIONS.md  CIV5_DESIGN_PLAN.md  COMPARISON.md  CONTEXT_ROADMAP.md  CUSTOM_WONDERS.md  DATA_SOURCES.md  DESIGN.md  DOCKER.md  DOGFOODING_NOTES.md  EVOLUTION.md  FASE1_CLOSURE.md  GETTING_STARTED.md  MCP.md  PERMANENT_AGENT_CONSOLE_PLAN.md  PHASE_1_VERIFICATION.md  PLAN_ABSORCION_ORCHESTRATORS.md  PLAN_ARREGLOS_DETALLADO.md  PLAN_EJECUCION.md  PUBLIC_ARCHITECTURE.md  README.md  REMOTE_ACCESS.md  REVIEW_v2.0_CLOSE.md  ROADMAP.md  ROADMAP_IMPERIAL_WORKSHOP.md  ROADMAP_RIMWORLD_FROSTPUNK.md  SCOPE.md  TASKBOARD.md  THREE_RENDERER.md  UX_IMPROVEMENT_PLAN.md  VISUAL_WORKFLOW_IDEATION.md  WONDER_CONTRACT.md  handoff-sprint-cierre.md  implementation_plan.md
e2e/: chat-model-picker.spec.ts  local-view-memory.spec.ts  local-view.spec.ts  render-mode-parity.spec.ts  repociv.spec.ts
scripts/: backup-events.sh  build-agent-image.sh  build-asset-atlas.py  (+23 more)
(+539 files in other folders)
