[project]
name = "repociv-server"
version = "0.1.0"
description = "RepoCiv Python bridge and HTTP server"
requires-python = ">=3.11"

[tool.ruff]
# Server code is the only Python source we own; keep it consistent.
line-length = 100
target-version = "py311"
extend-exclude = [
    "node_modules",
    "dist",
    "build",
    ".venv",
    "venv",
    "coverage",
    "test-results",
    "playwright-report",
    "public",
    "shared",
]

[tool.ruff.lint]
# Default E + F rules (pycodestyle + pyflakes). Bumped up incrementally
# as we tighten the gate; we start conservative to avoid debt avalanche.
select = ["E", "F"]
ignore = [
    "E501",  # line length — formatter-owned
]

[tool.ruff.lint.per-file-ignores]
# Tests use lambdas freely for monkeypatch fixtures; legacy `pass` style.
"server/test_*.py" = ["E731"]
